Fix: Weird vertical alignment behavior

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -57,9 +57,8 @@ body {
 }
 
 .nav-menu-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 2fr 3fr;
 
     height: 25vh;
 }
@@ -68,25 +67,26 @@ body {
 
 .title-button-wrapper {
     display: flex;
-    margin: 30px 0px;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu-list-title {
-    padding: 20px;
+    padding: 5px;
 
     font-family: 'Montserrat';
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
     /* This color is going to change with the js */
     color: var(--menu-exercise-title-color);
 }
 
 .toggle-list-button {
-    width: 120px;
+    padding: 5px;
     border: solid 3px var(--button-exercise-border-color);
 
     font-family: 'Montserrat';
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 500;
 
     border-radius: 100px;
@@ -103,11 +103,9 @@ body {
 	justify-content: center;
     overflow: auto;
 }
-
 .list-wrapper::-webkit-scrollbar {
     width: 0.000001px;
 } 
-
 .list-container {
     display: flex;
     flex-wrap: wrap;
@@ -178,10 +176,8 @@ body {
     }
 
     .nav-menu-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    
+        display: grid;
+        grid-template-rows: 1fr 8fr;   
         height: 100vh;
     }
 
@@ -191,8 +187,8 @@ body {
 
     .list-container {
         flex-direction: column;
-        justify-content: center;
         flex-wrap: nowrap;
+        justify-content: flex-start;
     }
 
     .list-button {
@@ -207,11 +203,16 @@ body {
 
 @media (min-width: 1280px) {
 
-    .list-container {
-        flex-direction: column;
-        align-content: none;
-        justify-content: center;
+    .menu-list-title {
+        padding: 10px;
+        font-size: 1.2rem;
     }
+    
+    .toggle-list-button {
+        padding: 10px;
+        font-size: 1rem;
+    }
+
 
     .list-button {
         width: 320px;
